--- a/CrudOperationApi/CrudOperationApi/appsettings.json
+++ b/CrudOperationApi/CrudOperationApi/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "DbConnection": "Server=localhost; Database=AkijFoodDB; User ID=userMahmud;Password=1234;"
+  "DbConnection": "Server=localhost; Database=AkijFoodDB; User ID=userMahmud;Password=1234;Trusted_Connection=true"
 }
